# SIMULANDO-ENTREGA-

./: CMakeLists.txt  REPORT.md
include/: hash.h  list.h  no.h  sort.h
input/: A Intrusa.txt  A Mao e A Luva.txt  Cancoes.txt  Folhas Soltas.txt  O Federalismo.txt  Paz e Arbitragem.txt  nome_arquivos.txt
src/: hash.cpp  list.cpp  no.cpp
tests/: teste1.cpp  teste2.cpp
